@@ -4,7 +4,7 @@ import com.github.database.rider.cdi.api.DBRider;
 import com.github.database.rider.core.api.configuration.DBUnit;
 import com.github.database.rider.core.api.configuration.Orthography;
 import com.github.database.rider.core.api.dataset.DataSet;
-import no.orm.allowed.entity.jpa.SecondEntityAttributes;
+import no.orm.allowed.entity.jpa.WorkerAttributes;
 import org.assertj.core.api.MapAssert;
 import org.assertj.core.api.OptionalAssert;
 import org.junit.jupiter.api.DisplayName;
@@ -33,14 +33,14 @@ public abstract class RepositoryTest {
 
     @ParameterizedTest
     @MethodSource("getMethodParametersWithIdsInProperOrder")
-    @DisplayName("When ids of another entity sorted by is obsolete and city attributes are queried then return ids in proper order")
-    protected void test1(String animalPrefix,
+    @DisplayName("When ids of animal sorted by is dangerous and nature attributes are queried then return ids in proper order")
+    protected void test1(String namePrefix,
                          long skip,
                          long limit,
                          List<Long> expectedIds) {
-        List<Long> anotherEntityIds = repository.getIsObsoleteAndCitySortedAnotherEntityIds(animalPrefix, skip, limit);
+        List<Long> animalIds = repository.getIsDangerousAndNatureSortedAnimalIds(namePrefix, skip, limit);
 
-        assertThat(anotherEntityIds).isNotNull()
+        assertThat(animalIds).isNotNull()
                 .hasSize(expectedIds.size())
                 .isEqualTo(expectedIds);
     }
@@ -54,45 +54,45 @@ public abstract class RepositoryTest {
     }
 
     @Test
-    @DisplayName("When distinct second entity names are queried for first entity id then return two values")
+    @DisplayName("When distinct worker descriptions are queried for company id then return two values")
     protected void test2() {
-        List<String> distinctSecondEntityNames = repository.getDistinctSecondEntityNames(1L);
+        List<String> distinctWorkerDescriptions = repository.getDistinctWorkerDescriptions(1L);
 
-        assertThat(distinctSecondEntityNames).isNotNull()
+        assertThat(distinctWorkerDescriptions).isNotNull()
                 .hasSize(2)
-                .containsExactlyInAnyOrderElementsOf(List.of("TestValue1", "TestValue2"));
+                .containsExactlyInAnyOrderElementsOf(List.of("Lazy", "Sleepy"));
     }
 
     @Test
-    @DisplayName("When distinct second entity names are queried for non-existent first entity id then return no values")
+    @DisplayName("When distinct worker descriptions are queried for non-existent company id then return no values")
     protected void test3() {
-        List<String> distinctSecondEntityNames = repository.getDistinctSecondEntityNames(999L);
+        List<String> distinctWorkerDescriptions = repository.getDistinctWorkerDescriptions(999L);
 
-        assertThat(distinctSecondEntityNames).isNotNull()
+        assertThat(distinctWorkerDescriptions).isNotNull()
                 .isEmpty();
     }
 
     @Test
-    @DisplayName("When second entity attributes are queried for second entity id then return attributes")
+    @DisplayName("When worker attributes are queried for worker id then return attributes")
     protected void test4() {
-        Optional<SecondEntityAttributes> secondEntityAttributes = repository.getSecondEntityAttributes(151L);
+        Optional<WorkerAttributes> workerAttributes = repository.getWorkerAttributes(151L);
 
-        OptionalAssert<SecondEntityAttributes> attributesAssertion = assertThat(secondEntityAttributes).isNotNull();
-        attributesAssertion.map(SecondEntityAttributes::getName)
-                .hasValue("TestValue2");
-        attributesAssertion.flatMap(SecondEntityAttributes::getType)
+        OptionalAssert<WorkerAttributes> attributesAssertion = assertThat(workerAttributes).isNotNull();
+        attributesAssertion.map(WorkerAttributes::getDescription)
+                .hasValue("Lazy");
+        attributesAssertion.flatMap(WorkerAttributes::getName)
                 .asInstanceOf(optional(String.class))
                 .isEmpty();
-        attributesAssertion.flatMap(SecondEntityAttributes::getColor)
+        attributesAssertion.flatMap(WorkerAttributes::getFavouriteColor)
                 .hasValue("Blue");
     }
 
     @Test
-    @DisplayName("When second entity attributes are queried for non-existent second entity id then return no attributes")
+    @DisplayName("When worker attributes are queried for non-existent worker id then return no attributes")
     protected void test5() {
-        Optional<SecondEntityAttributes> secondEntityAttributes = repository.getSecondEntityAttributes(999L);
+        Optional<WorkerAttributes> workerAttributes = repository.getWorkerAttributes(999L);
 
-        assertThat(secondEntityAttributes).isNotNull()
+        assertThat(workerAttributes).isNotNull()
                 .isEmpty();
     }
 
@@ -107,10 +107,10 @@ public abstract class RepositoryTest {
 
     private static Stream<Arguments> getAttributeNamesWithCorrectCount() {
         return Stream.of(
-                Arguments.of(Set.of("type", "color", "taste", "look"), 5L),
-                Arguments.of(Set.of("type", "color", "taste"), 5L),
-                Arguments.of(Collections.singleton("type"), 2L),
-                Arguments.of(Collections.singleton("color"), 3L),
+                Arguments.of(Set.of("name", "favouriteColor", "height", "mood"), 5L),
+                Arguments.of(Set.of("name", "favouriteColor", "height"), 5L),
+                Arguments.of(Collections.singleton("name"), 2L),
+                Arguments.of(Collections.singleton("favouriteColor"), 3L),
                 Arguments.of(Collections.emptySet(), 0L)
         );
     }
@@ -118,14 +118,14 @@ public abstract class RepositoryTest {
     @Test
     @DisplayName("When distinct attribute values count by attribute names is queried for attribute names then return correct count by attribute name")
     protected void test7() {
-        Set<String> attributeNames = Set.of("type", "color");
+        Set<String> attributeNames = Set.of("name", "favouriteColor");
         Map<String, Long> distinctAttributeValuesCountByAttributeName = repository.getDistinctAttributeValuesCountByAttributeName(attributeNames);
 
         MapAssert<String, Long> countByAttributeNameAssert = assertThat(distinctAttributeValuesCountByAttributeName).isNotNull()
                 .hasSize(2);
-        countByAttributeNameAssert.extractingByKey("type")
+        countByAttributeNameAssert.extractingByKey("name")
                 .isEqualTo(2L);
-        countByAttributeNameAssert.extractingByKey("color")
+        countByAttributeNameAssert.extractingByKey("favouriteColor")
                 .isEqualTo(3L);
     }
 
